# openapi.yaml
@@ -46,6 +46,51 @@ paths:
               schema:
                 type: integer
                 format: int32
+
+  /Order:
+    get:
+      summary: "GET Order"
+      parameters:
+        - name: "id"
+          in: "query"
+          description: "A 32 bit integer"
+          required: false
+          schema:
+            type: integer
+            format: int32
+        - name: "customerId"
+          in: "query"
+          description: "A 32 character string of character, divided into 8-4-4-4-12 segments"
+          required: false
+          schema:
+            $ref: "#/components/schemas/CustomerUuid"
+      responses:
+        "200":
+          description: "OK"
+          headers:
+            "x-order-count":
+              schema:
+                type: integer
+                format: int32
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  properties:
+                    id:
+                      type: integer
+                      format: int32
+                    customerId:
+                      $ref: "#/components/schemas/CustomerUuid"
+        "404":
+          description: "Not found"
+          headers:
+            "x-order-count":
+              schema:
+                type: integer
+                format: int32
+
 components:
   schemas:
     CustomerUuid:
